5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1621_2925.log
== TEST (2019-04-01 18:15:59) 
-- CODE:
numero de bacterias = float(input("geraçao atual de bacterias"))
a = x**(y)
b = 2 * x**(y)
-- ERROR:
File "XXXX", line 1
    numero de bacterias = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:35) 
-- CODE:
numero de bacterias = float(input("geraçao atual de bacterias"))
a = x**(y)
b = 2 * x**(y)
-- ERROR:
File "XXXX", line 1
    numero de bacterias = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:22:04) 
-- CODE:
numero de bacterias = float(input("geraçao atual de bacterias"))
a = x**(y)
b = 2 + x**(y)
-- EXECUTION TIME:
0.165918
-- ERROR:
  File "/home/codebench/codes/1621/2925/main.py", line 1
    numero de bacterias = float(input())
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:05) 
-- CODE:
numero de bacterias = float(input("geraçao atual de bacterias"))
a = x**(y)
b = 2 + x**(y)
-- ERROR:
File "XXXX", line 1
    numero de bacterias = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:42) 
-- CODE:
bacterias = float(input("populacao de bacterias"))
a = x**(y)
b = 2 + x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = x**(y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:06) 
-- CODE:
bacterias = float(input("populacao de bacterias"))
n = x**(y)
n = 2 + x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = x**(y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:13) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n = x**(y)
n = 2 + x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = x**(y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:47) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n = x**(y)
n = 2 * x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = x**(y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:26:34) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = x
n2 = x**(y)
n = 2 * x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n1 = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:26:50) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
x = x
n2 = x**(y)
n = 2 * x**(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:27) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:50) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:27) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
n3 = 2 + 2**3
soma = (n1 + n2 + n3)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:33) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
n3 = 2 + 2**3
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:51) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
n3 = 2 + 2**3
n4 = 2 + 2**5
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:03) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
n3 = 2 + 2**3
n4 = 2 + 2**5
soma = (n1 + n2 + n3 + n4)
print(soma)
-- OUTPUT:
49
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:16) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2**0
n2 = 2 + 2**1
n3 = 2 + 2**3
n4 = 2 + 2**4
soma = (n1 + n2 + n3 + n4)
print(soma)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:41) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:31:47) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- EXECUTION TIME:
0.128833
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
32
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
32
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:49) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:32:18) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2 * 2**1
n2 = 2 * 2**3
n3 = 2 * 2**4
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:32:49) 
-- CODE:
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:37) 
-- CODE:
from math import*
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:35:45) 
-- CODE:
from math import*
bacterias = float(input("populacao de bacterias:"))
n1 = 2 + 2**1
n2 = 2 + 2**3
n3 = 2 + 2**4
soma = (n1 + n2 + n3)
print(soma)
-- EXECUTION TIME:
0.183973
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
32
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
32
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
